Update JwtTokenUtil.java